--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=none
 
 # spring.jpa.show-sql=true
 # spring.jpa.properties.hibernate.format_sql=true
+spring.servlet.multipart.max-file-size =-1
+spring.servlet.multipart.max-request-size =-1
